- fixed issues with book list not fitting inside the white area

--- a/src/app.less
+++ b/src/app.less
@@ -231,7 +231,7 @@ a.is-read {
     float: left;
     margin-bottom: 75px;
 
-    div {
+    ul {
        width: 50%;
        float: left;
     }
